[package]
name = "newsletter_app"
version = "0.1.0"
authors = ["Atul Bhatt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_app"

[dependencies]
actix-web = "4"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
tokio = "1.27.0"

[dev-dependencies]
actix-rt = "2.8.0"
